--- a/training-web/src/main/resources/application.properties
+++ b/training-web/src/main/resources/application.properties
@@ -1,21 +1,32 @@
 ## 数据库
-spring.datasource.url=jdbc:mysql://localhost:3307/demo
-spring.datasource.username=darcy
-spring.datasource.password=123456
 
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.logAbandoned=true
-spring.datasource.removeAbandoned=true
-spring.datasource.testWhileIdle=true
-spring.datasource.validationQuery=select 1
-spring.datasource.validationInterval=300000
+logAbandoned=true
+removeAbandoned=true
+testOnBorrow=true
+validationQuery=select 1
+driverClassName=com.mysql.jdbc.Driver
 
-## 多数据源
+datasource.catalog.url=jdbc:mysql://192.168.100.10/training
+datasource.catalog.username=darcy
+datasource.catalog.password=TsRAScf1aTojt1
 
+datasource.catalog.logAbandoned=${logAbandoned}
+datasource.catalog.removeAbandoned=${removeAbandoned}
+datasource.catalog.testOnBorrow=${testOnBorrow}
+datasource.catalog.validationQuery=${validationQuery}
+datasource.catalog.driverClassName=${driverClassName}
+
+datasource.node.logAbandoned=${logAbandoned}
+datasource.node.removeAbandoned=${removeAbandoned}
+datasource.node.testOnBorrow=${testOnBorrow}
+datasource.node.validationQuery=${validationQuery}
+datasource.node.driverClassName=${driverClassName}
 
 ## hibernate, JPA
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddlAuto=none
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 ## 安全配置
