--- a/training-core/pom.xml
+++ b/training-core/pom.xml
@@ -56,6 +56,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -66,12 +67,22 @@
 
     </dependencies>
 
-    <repositories>
-        <repository>
-            <id>nexus</id>
-            <url>http://nexus.darcytech.com/content/groups/public</url>
-        </repository>
-    </repositories>
-
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <configLocation>google_checks.xml</configLocation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>3.0.3</version>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
