--- a/training-web/src/main/resources/application.properties
+++ b/training-web/src/main/resources/application.properties
@@ -8,7 +8,7 @@ driverClassName=com.mysql.jdbc.Driver
 defaultAutoCommit=false
 
 datasource.catalog.url=jdbc:mysql://192.168.100.10/training
-datasource.catalog.username=darcy‰
+datasource.catalog.username=darcy
 datasource.catalog.password=TsRAScf1aTojt1
 
 datasource.catalog.logAbandoned=${logAbandoned}
@@ -27,7 +27,6 @@ datasource.node.defaultAutoCommit=${defaultAutoCommit}
 
 ## hibernate, JPA
 spring.jpa.hibernate.ddlAuto=none
-spring.jpa.hibernate.namingStrategy=
 spring.jpa.properties.hibernate.default_batch_fetch_size=50
 spring.jpa.properties.hibernate.batch_fetch_style=dynamic
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
@@ -36,8 +35,13 @@ spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.order_inserts=true
 
-
 ## 安全配置
 security.basic.enabled=false
 
 ## tomcat 配置
+server.port=8081
+
+spring.devtools.restart.exclude=static/**,public/**,templates/**
+#spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
+
+## logging.config=logback.xml  ## 生产环境上可以配置成不同的logback文件
