--- a/training-web/src/main/resources/application.properties
+++ b/training-web/src/main/resources/application.properties
@@ -45,3 +45,4 @@ spring.devtools.restart.exclude=static/**,public/**,templates/**
 #spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
 
 ## logging.config=logback.xml  ## 生产环境上可以配置成不同的logback文件
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
