--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.3.2.RELEASE</version>
+        <version>1.3.3.RELEASE</version>
     </parent>
 
     <modules>
@@ -22,8 +22,8 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <guava.version>18.0</guava.version>
-        <elasticsearch.version>2.1.1</elasticsearch.version>
+        <guava.version>19.0</guava.version>
+        <spring-data-releasetrain.version>Hopper-RELEASE</spring-data-releasetrain.version>
     </properties>
 
     <build>
