--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.2.RELEASE</version>
+        <version>1.5.2.RELEASE</version>
     </parent>
+
+    <url>http://git.darcytech.com/base/training</url>
+    <organization>
+        <name>Hangzhou Darcytech, Inc.</name>
+        <url>http://www.topchitu.com</url>
+    </organization>
 
     <modules>
         <module>training-core</module>
@@ -24,7 +30,7 @@
     <properties>
         <commons-lang3.version>3.4</commons-lang3.version>
         <dubbo.version>2.8.3</dubbo.version>
-        <guava.version>19.0</guava.version>
+        <guava.version>21.0</guava.version>
         <java.version>1.8</java.version>
         <jsr305.version>3.0.1</jsr305.version>
     </properties>
